[package]
name = "Attribution_private_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
teloxide = "0.7.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.6.10", features = ["codec"] }
pretty_env_logger = "0.4.0"
log = "0.4.14"
dotenv = "0.15.0"
anyhow = "1.0"
